versions/v3.6.0/doxygen/html/unionemul_1_1bus.md
---
version: v3.6.0
source_url: https://raw.githubusercontent.com/zephyrproject-rtos/zephyr/3.6.0/doc/doxygen/html/unionemul_1_1bus.html
original_path: doxygen/html/unionemul_1_1bus.html
---

| Logo | Zephyr API Documentation  3.6.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

emul::bus Union Reference

Pointer to the emulated bus node.
[More...](#details)

`#include <[emul.h](emul_8h_source.md)>`

| Data Fields | |
| --- | --- |
| struct [i2c\_emul](structi2c__emul.md) \* | [i2c](#a1f2079251cce4ffa92d3f1a4315b7b42) |
| struct [espi\_emul](structespi__emul.md) \* | [espi](#adbf407e15fbfe3da70b0c458e8edcf8d) |
| struct [spi\_emul](structspi__emul.md) \* | [spi](#aa9e71864d3e4a0df64ed785522f29139) |
| struct [no\_bus\_emul](structno__bus__emul.md) \* | [none](#a6a8ad4e1e183a81c05b64b5c87cfa25a) |

## Detailed Description

Pointer to the emulated bus node.

## Field Documentation

## [◆ ](#adbf407e15fbfe3da70b0c458e8edcf8d)espi

| struct [espi\_emul](structespi__emul.md)\* emul::bus::espi |
| --- |

## [◆ ](#a1f2079251cce4ffa92d3f1a4315b7b42)i2c

| struct [i2c\_emul](structi2c__emul.md)\* emul::bus::i2c |
| --- |

## [◆ ](#a6a8ad4e1e183a81c05b64b5c87cfa25a)none

| struct [no\_bus\_emul](structno__bus__emul.md)\* emul::bus::none |
| --- |

## [◆ ](#aa9e71864d3e4a0df64ed785522f29139)spi

| struct [spi\_emul](structspi__emul.md)\* emul::bus::spi |
| --- |

---

The documentation for this union was generated from the following file:

- zephyr/drivers/[emul.h](emul_8h_source.md)

- [emul](structemul.md)
- [bus](unionemul_1_1bus.md)
- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.6.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
